chnages done using . command

--- a/vamsi.html
+++ b/vamsi.html
@@ -6,6 +6,7 @@
     <title>Document</title>
 </head>
 <body>
+    1234567890-0987cls
     vamsi.html file
     qwertyuioiuytrsdfghjkl;lkjhgfdsdfghjkl;=21  ZXCVBNM,./
 </body>
